# tunnel

./: .gitignore  Caddyfile  README.md  e2e-test.sh  install.sh  next.config.ts  package.json  pyproject.toml  server.py  templates_index.html  worklog.md
client/: client.py  install.ps1  install.sh
client/test-site/: index.html
db/: custom.db
download/: README.md  install-client.sh  install-server.sh  tunnel-client.ts
mini-services/db/: custom.db
mini-services/tunnel-server/: index.ts  package.json  tunnel-client.ts
mini-services/tunnel-server/prisma/: schema.prisma
prisma/: schema.prisma
prisma/db/: custom.db
server/: db.py  install.sh  requirements.txt  server.py
server/templates/: index.html
src/app/: layout.tsx  page.tsx
src/app/api/config/: route.ts
src/app/api/tunnel-status/: route.ts
src/app/api/tunnels/: route.ts
src/app/api/tunnels/[id]/: route.ts
src/app/api/tunnels/[id]/logs/: route.ts
tunnel_client/: __init__.py  __main__.py  client.py
